--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -52,6 +52,7 @@ body {
 	margin:auto;
 	font-family: 'Work Sans' ;
 	font-size: 14px;
+	background-color: #FFFEF8;
 }
 header {
 	display: flex;
@@ -90,12 +91,17 @@ nav ul {
 	list-style-type: none;
 
 }
-nav li {
+nav li  {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
 
-li:hover {
+nav li a {
+	text-decoration: none;
+	color: black;
+}
+
+li a:hover {
 	color: #B1663C;
 }
 #introduction {
@@ -180,11 +186,20 @@ input[type="submit"]{
 	border-radius: 60px ;
 }
 
-footer nav ul {
-	display: flex;
-	justify-content: flex-end;
-	margin: 2em
+footer {
+	width: 100%;
+	height: 60px;
+	background-color: white;
+	align-content: center;
+	justify-items: end;
 }
+
+footer p {
+	font-family: 'Work Sans';
+	padding: 0px 10px;
+	font-weight: 300;
+}
+
 
 #portfolio nav {
 	display: flex;
@@ -210,5 +225,68 @@ footer nav ul {
 	background-color: white;
 	border-radius: 24px;
     padding: 4px 19px 4px 19px;
-	border: #1D6154 solid 1px;
+	border: #91beb6 solid 1px;
 }
+
+/* page login */
+
+.bodyLog {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	min-height: 100vh;
+}
+
+.loginPage {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.loginPage nav li {
+	font-family: 'Work Sans';
+	font-weight: 400;
+}
+
+.loginPage nav li:nth-child(3) {
+	font-weight: 600;
+}
+
+
+#loginForm {
+	width: 35%;
+	margin: auto;
+	margin-bottom: 100px;
+}
+
+#loginForm h2{
+	margin-bottom: 20px;
+	text-align: center;
+}
+#loginForm form {
+	text-align: left;
+	margin-top:30px;
+	display: flex;
+	flex-direction: column;
+}
+
+#loginForm input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+#loginForm input[type="submit"]  {
+	width: fit-content;
+	padding: 0px 40px;
+}
+#loginForm label {
+	margin: 2em 0 1em 0;
+}
+
+#loginForm form label:last-of-type {
+	text-align: center;
+	text-decoration: underline;
+}
+
