--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -57,7 +57,8 @@ body {
 header {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 0
+	margin-bottom: 50px ;
+	padding-top: 110px;
 }
 section {
 	margin: 50px 0
@@ -297,3 +298,36 @@ footer p {
 }
 
 /*CSS une fois login*/
+.barEdit {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	margin-bottom: 50px;
+	width: 100%;
+	height: 60px;
+	background-color: black;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+}
+.divEdit {
+	color: white;
+	display: flex;
+	flex-flow: row;
+	align-items: center;
+	gap: 10px;
+} 
+
+.divEdit i {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 16px;
+	width: 16px	;
+}
+
+.divEdit.btnEdition {
+	color: #1D6154;
+}
