--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -312,6 +312,38 @@ footer p {
 	align-items: center;
 	gap: 10px;
 }
+
+#portfolio .divH {
+	margin-top: 145px;
+	margin-bottom: 100px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 30px;
+}
+
+#portfolio .divH h2 {
+	margin: 0;
+}
+
+.btnEdit {
+	background-color: inherit;
+	border: none;
+	cursor: pointer;
+}
+
+.btnEdit .divEdit {
+	color: black;
+	height: 18px;
+	line-height: 100%;
+	gap: 5px;
+}
+
+.btnEdit .divEdit p {
+	line-height: 100%;
+	font-size: 16px;
+}
+
 .divEdit {
 	color: white;
 	display: flex;
@@ -330,4 +362,128 @@ footer p {
 
 .divEdit.btnEdition {
 	color: #1D6154;
+}
+
+/* personnalisation de la popup*/
+
+.backPopup {
+	display: none;
+	position: fixed;
+	top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100vh;
+    width: 100vw;
+	background-color: rgba(255, 255, 255, 0.3);
+	z-index: 1;
+}
+
+.popup {
+	position: fixed;
+	top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+	padding: 25px 50px 35px 50px;
+	flex-direction: column;
+	gap: 5px;
+	background-color: white;
+	min-width: 50%;
+	max-width: 50%;
+	min-height: fit-content;
+	max-height: 700px;
+	display: flex;
+	z-index: 1;
+	border-radius: 15px;
+}
+
+.active {
+	display: flex;
+}
+
+.popup .btnCroix {
+	position: relative;
+	top: -5px;
+	right: -24px;
+	padding: 0;
+	border: none;
+	background-color: inherit;
+	cursor: pointer;
+	align-self: end;
+}
+
+.popup .btnCroix .fa-xmark:before {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 24px;
+	height: 24px;
+	font-size: 18px;
+}
+
+.popup h2 {
+	align-self: center;
+	font-family: "Work Sans";
+	color: black;
+	height: 30px;
+	line-height: 26px;
+	font-weight: 400;
+}
+
+.popup .parentPj {
+	position: relative;
+	min-width: 100%;
+	height: 50%;
+	display: flex;
+	flex-flow: row wrap;
+	align-content: center;
+	margin-top: 25px;
+	margin-bottom: 30px;
+	padding: 10px 0px 40px 0px;
+	gap: 10px;
+	border-bottom: 1px solid #B3B3B3;
+}
+
+.popup .parentPj figure {
+	display: flex;
+	position: relative;
+	height: fit-content;
+	min-width: 16%;
+	max-width: 16%;
+}
+
+.popup .parentPj figure img {
+	position: relative;
+	box-sizing: border-box;
+	width: 100%;
+}
+
+.popup .fa-trash-can {
+	position: relative;
+	top: 5px;
+	right: 22px;
+	z-index: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-width: 17px;
+	min-height: 17px;
+	max-height: 17px;
+	background-color: black;
+	border: none;
+	cursor: pointer;
+	color: white;
+	font-size: 10px;
+}
+
+.popup .addPhoto {
+	border: none;
+	cursor: pointer;
+	color: white;
+	background-color: #1D6154;
+	padding: 10px 50px;
+	border-radius: 25px;
+	align-self: center;
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 100%;
 }
